--- a/templates/edit_student.html
+++ b/templates/edit_student.html
@@ -17,11 +17,9 @@
             </h1>
             <ul class="nav-menu">
                 <li><a href="/">Dashboard</a></li>
-                <li><a href="/students" class="active">Students</a></li>
-                <li><a href="/add">Add Student</a></li>
+                <li><a href="/students">Students</a></li>
                 <li><a href="/stats">Statistics</a></li>
                 <li><a href="/command">Commands</a></li>
-                <li><a href="/import">Import Excel</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle" onclick="toggleDarkMode()" title="Toggle dark mode">
                         <span class="material-symbols-outlined">dark_mode</span>
