Fix individual student page graphs - correct container ID and title variable

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -275,7 +275,7 @@
                 </button>
             </div>
             
-            <div class="graph-container" id="graphContainer">
+            <div class="graph-container" id="graph-container">
                 <div style="text-align: center; padding: 3rem; color: var(--md-sys-color-on-surface-variant);">
                     <span class="material-symbols-outlined" style="font-size: 4rem; opacity: 0.5;">insert_chart</span>
                     <p>Select a chart type to visualize performance</p>
